feat: add light mode

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import "modules/reset";
 
 :root {
+  --main-color-dark: 0, 0, 0;
   --main-color: 52,53,65;
   --main-color-light: 64,65,79;
   --sub-color: 255, 255, 255;
